# vector_ros_openai

./: CMakeLists.txt  README.md  package.xml  setup.py
config/: vector_openai_qlearn_params.yaml
launch/: start_simulation.launch  start_training.launch
scripts/: start_qlearning.py
src/vector_ros_openai/: openai_ros_common.py  robot_gazebo_env.py
src/vector_ros_openai/robot_envs/: anki_vector_env.py
src/vector_ros_openai/task_envs/: task_envs_list.py
src/vector_ros_openai/task_envs/anki_vector/: anki_vector_world.py
src/vector_ros_openai/task_envs/anki_vector/config/: anki_vector_world.yaml
training_results/: openaigym.episode_batch.0.17052.stats.json  openaigym.episode_batch.0.7531.stats.json  openaigym.episode_batch.0.8616.stats.json  openaigym.episode_batch.0.9695.stats.json  openaigym.manifest.0.17052.manifest.json  openaigym.manifest.0.7531.manifest.json  openaigym.manifest.0.8616.manifest.json  openaigym.manifest.0.9695.manifest.json
